--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
-GROQ_API_KEY=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
-DISCORD_TOKEN=MTQwOTc1NTcwODM4MzMwMTYzMg.GlMAUP.Ig3If1xpgEDdJ361ngizrvz-GJUJ8Pk4I6cPlc
+GROQ_API_KEY=YOUR_API_KEY
+DISCORD_TOKEN=YOUR_DISCORD_TOKEN
 BOT_PREFIX=/
-BOT_OWNER_ID=744475018402201600
-LOG_CHANNEL_ID=1404864479136579614
+BOT_OWNER_ID=YOUR_DISCORD_ID
+LOG_CHANNEL_ID=YOUR_DISCORD_CHANNEL
 NODE_ENV=production
+//モデル選択(下記は例)
 GROQ_MODEL=openai/gpt-oss-120b
+
