--- a/.env
+++ b/.env
@@ -1,9 +1,10 @@
 GROQ_API_KEY=YOUR_API_KEY
 DISCORD_TOKEN=YOUR_DISCORD_TOKEN
 BOT_PREFIX=/
-BOT_OWNER_ID=YOUR_DISCORD_ID
-LOG_CHANNEL_ID=YOUR_DISCORD_CHANNEL
+BOT_OWNER_ID=
+LOG_CHANNEL_ID=
 NODE_ENV=production
 //モデル選択(下記は例)
 GROQ_MODEL=openai/gpt-oss-120b
+
 
