--- a/.env
+++ b/.env
@@ -4,8 +4,9 @@ BOT_PREFIX=/
 BOT_OWNER_ID=
 LOG_CHANNEL_ID=
 NODE_ENV=production
-//モデル選択(下記は例)
-GROQ_MODEL=qwen/qwen3-32b
+//モデル選択(下記は例、Thinkingモデルは現在非対応)
+GROQ_MODEL=openai/gpt-oss-120b
+
 
 
 
