--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,9 @@ BOT_PREFIX=/
 BOT_OWNER_ID=
 LOG_CHANNEL_ID=
 NODE_ENV=production
-//モデル選択(下記は例、Thinkingモデルは現在非対応)
+//モデル選択(下記は例、Thinkingモデルは現在非対応です)
 GROQ_MODEL=openai/gpt-oss-120b
+
 
 
 
